navbar border bottom extra space issue solved

--- a/front-end/src/Components/Pages/Navbar.css
+++ b/front-end/src/Components/Pages/Navbar.css
@@ -110,12 +110,16 @@
 }
 
 .second_nav>a {
+    display: block;
     text-decoration: none;
     color: black;
+    border-bottom: 2px solid white;
+    /* border-bottom: none; */
 }
 
 .second_nav>a:hover {
     cursor: pointer;
-    border-bottom: 2px solid hotpink;
     color: hotpink;
+    border-bottom: 2px solid hotpink;
+
 }
